# CommentHarvest

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_commentharvest.py
src/: __init__.py  extract_docx_comments.py
